# RAGdrag-labs

./: .gitignore  README.md  cleanup.sh  dogfood-results.json  pyproject.toml  start-agentic.sh  start-guarded.sh  start-ingestible.sh  start-monitored.sh  start-open.sh
targets/: rag_server.py  rag_server_agentic.py  rag_server_guarded.py  rag_server_ingestible.py  rag_server_monitored.py  rag_server_open.py
tests/: test_evade_e2e.py  test_exfiltrate.py  test_fingerprint.py  test_full_scan.py  test_hijack_e2e.py  test_listener.py  test_poison_e2e.py  test_probe.py
