[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragdrag-labs"
version = "0.5.0"
description = "Lab servers and e2e tests for RAGdrag security assessment toolkit."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "McKern3l" },
]
dependencies = [
    "ragdrag>=0.5.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "chromadb>=0.4",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
